need to fix little bugs: hover animation on nav bar, maybe make cursor animation smoother, fix formatting on calculator project container? changed font to monserrat, added hover animation to project category items, fixed layout of project category. also need to fix date on timeline to make it align to the left.

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,21 @@
+@font-face{
+  font-family: montserrat;
+  src: url('./Montserrat/Montserrat-VariableFont_wght.ttf')
+}
+
+@font-face {
+  font-family: montserratbold;
+  src: url('./Montserrat/static/Montserrat-Regular.ttf');
+}
+
+@font-face {
+  font-family: montserratlight;
+  src: url('./Montserrat/static/Montserrat-Light.ttf');
+}
+
+
 .App {
   text-align: center;
+  font-family: montserrat;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
